--- a/Kismat App/Views/ViewControllers/ReqConVC/Xibs/TabsHeaderTVCell.xib
+++ b/Kismat App/Views/ViewControllers/ReqConVC/Xibs/TabsHeaderTVCell.xib
@@ -39,7 +39,7 @@
                                         <color key="tintColor" name="Secondary Grey"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal">
-                                            <imageReference key="image" image="wifi man grey" symbolScale="medium"/>
+                                            <imageReference key="image" image="wifi man grey 2" symbolScale="medium"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="regular"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -119,7 +119,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dOp-pE-AC1">
                                 <rect key="frame" x="0.0" y="81" width="417" height="52"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="conSelected" translatesAutoresizingMaskIntoConstraints="NO" id="jVp-Jj-MUG">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reqSelected" translatesAutoresizingMaskIntoConstraints="NO" id="jVp-Jj-MUG">
                                         <rect key="frame" x="0.0" y="0.0" width="417" height="52"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pw8-Ur-Foh">
@@ -291,21 +291,21 @@
     </objects>
     <designables>
         <designable name="4IN-oq-2Gx">
-            <size key="intrinsicContentSize" width="86" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="155" height="32.333333333333336"/>
         </designable>
         <designable name="amq-6n-jaK">
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="gjT-fS-ZUo">
-            <size key="intrinsicContentSize" width="51.666666666666664" height="16.333333333333332"/>
+            <size key="intrinsicContentSize" width="52.333333333333336" height="15"/>
         </designable>
     </designables>
     <resources>
         <image name="bell.badge.fill" catalog="system" width="117" height="128"/>
-        <image name="conSelected" width="401" height="38"/>
         <image name="logo name" width="3289" height="512"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
-        <image name="wifi man grey" width="162" height="152"/>
+        <image name="reqSelected" width="401" height="47"/>
+        <image name="wifi man grey 2" width="162" height="152"/>
         <namedColor name="Secondary Grey">
             <color red="0.3059999942779541" green="0.4309999942779541" blue="0.50599998235702515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
