--- a/Kismat App/Storyboard/Base.lproj/Main.storyboard
+++ b/Kismat App/Storyboard/Base.lproj/Main.storyboard
@@ -5356,7 +5356,7 @@ Thank you!</string>
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Send"/>
+                                        <state key="normal" title="Next"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
                                                 <color key="value" name="Success"/>
@@ -6777,7 +6777,7 @@ No worries if yes, the other person will not be notified.</string>
             <size key="intrinsicContentSize" width="329.66666666666669" height="243.66666666666666"/>
         </designable>
         <designable name="gu3-Xb-UMo">
-            <size key="intrinsicContentSize" width="36" height="30"/>
+            <size key="intrinsicContentSize" width="32" height="30"/>
         </designable>
         <designable name="hpB-hp-zzh">
             <size key="intrinsicContentSize" width="407" height="612"/>
