--- a/Kismat App/Views/ViewControllers/Setting/Xibs/SettingTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Setting/Xibs/SettingTVCell.xib
@@ -11,67 +11,106 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="SettingTVCell" customModule="Kismmet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="46" id="KGk-i7-Jjw" customClass="SettingTVCell" customModule="Kismmet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K0I-U5-lVI">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ks8-KW-Akm" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                <rect key="frame" x="20" y="6" width="335" height="32"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iq0-Sa-q5J" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
+                                <rect key="frame" x="16" y="0.0" width="344" height="46"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ks8-KW-Akm" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="41.666666666666657" y="8.6666666666666643" width="240.99999999999997" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="241" id="88t-11-oGO"/>
+                                            <constraint firstAttribute="height" constant="32" id="b8c-JC-hPf"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="txtColor">
+                                                <color key="value" name="Text grey"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="m"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
+                                                <real key="value" value="18"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3bQ-6D-lR8">
+                                        <rect key="frame" x="21" y="15" width="20" height="20"/>
+                                        <color key="tintColor" name="Text grey"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21.333333333333329" id="8NU-up-X5D"/>
+                                            <constraint firstAttribute="width" constant="20" id="uUr-cq-TxJ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Tob-jA-9nl">
+                                        <rect key="frame" x="307" y="15" width="15" height="17"/>
+                                        <color key="tintColor" name="Text grey"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="15" id="j09-N5-TWE"/>
+                                            <constraint firstAttribute="height" constant="24" id="vgN-a1-ekU"/>
+                                        </constraints>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="light"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.85098039215686272" green="0.85098039215686272" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="335" id="6dq-1y-GZZ"/>
-                                    <constraint firstAttribute="height" constant="32" id="iug-T5-KgG"/>
+                                    <constraint firstAttribute="bottom" secondItem="Tob-jA-9nl" secondAttribute="bottom" constant="10.666666666666657" id="Jac-ed-BaX"/>
+                                    <constraint firstItem="3bQ-6D-lR8" firstAttribute="top" secondItem="Iq0-Sa-q5J" secondAttribute="top" constant="14.000000000000002" id="TML-4l-Ruj"/>
+                                    <constraint firstItem="3bQ-6D-lR8" firstAttribute="leading" secondItem="Iq0-Sa-q5J" secondAttribute="leading" constant="21" id="Uve-nS-uKK"/>
+                                    <constraint firstItem="Ks8-KW-Akm" firstAttribute="centerX" secondItem="Iq0-Sa-q5J" secondAttribute="centerX" constant="-9.8333333333333144" id="nw6-nP-ozH"/>
+                                    <constraint firstAttribute="trailing" secondItem="Tob-jA-9nl" secondAttribute="trailing" constant="22" id="pCd-4b-xTa"/>
+                                    <constraint firstItem="Tob-jA-9nl" firstAttribute="top" secondItem="Iq0-Sa-q5J" secondAttribute="top" constant="11.333333333333336" id="qyC-eV-ZQO"/>
+                                    <constraint firstItem="Ks8-KW-Akm" firstAttribute="centerY" secondItem="Iq0-Sa-q5J" secondAttribute="centerY" constant="1.6666666666666643" id="tia-4v-kWr"/>
+                                    <constraint firstAttribute="bottom" secondItem="3bQ-6D-lR8" secondAttribute="bottom" constant="10.666666666666671" id="wPL-a1-1WF"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="txtColor">
-                                        <color key="value" name="Text grey"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="m"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                        <real key="value" value="24"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </label>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Ks8-KW-Akm" firstAttribute="centerY" secondItem="K0I-U5-lVI" secondAttribute="centerY" id="5j1-3c-aUd"/>
-                            <constraint firstItem="Ks8-KW-Akm" firstAttribute="centerX" secondItem="K0I-U5-lVI" secondAttribute="centerX" id="E7y-ek-K3H"/>
-                            <constraint firstAttribute="height" constant="44" id="Klg-cv-RMd"/>
+                            <constraint firstItem="Iq0-Sa-q5J" firstAttribute="top" secondItem="K0I-U5-lVI" secondAttribute="top" id="4Yk-BA-GeC"/>
+                            <constraint firstAttribute="height" constant="46" id="JzR-qY-ktD"/>
+                            <constraint firstAttribute="trailing" secondItem="Iq0-Sa-q5J" secondAttribute="trailing" constant="15" id="MBm-ih-xgL"/>
+                            <constraint firstItem="Iq0-Sa-q5J" firstAttribute="leading" secondItem="K0I-U5-lVI" secondAttribute="leading" constant="16" id="jtx-y9-moA"/>
+                            <constraint firstAttribute="bottom" secondItem="Iq0-Sa-q5J" secondAttribute="bottom" id="o3V-Bs-058"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="K0I-U5-lVI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="0Q8-S8-Qte"/>
-                    <constraint firstAttribute="bottom" secondItem="K0I-U5-lVI" secondAttribute="bottom" id="YPj-DE-HUl"/>
-                    <constraint firstAttribute="trailing" secondItem="K0I-U5-lVI" secondAttribute="trailing" id="ddr-8c-5ld"/>
-                    <constraint firstItem="K0I-U5-lVI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vOO-79-b8T"/>
+                    <constraint firstItem="K0I-U5-lVI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Gfc-1D-kKQ"/>
+                    <constraint firstAttribute="bottom" secondItem="K0I-U5-lVI" secondAttribute="bottom" id="ISN-2H-hfR"/>
+                    <constraint firstItem="K0I-U5-lVI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="dZA-A7-sNT"/>
+                    <constraint firstAttribute="trailing" secondItem="K0I-U5-lVI" secondAttribute="trailing" id="nCX-Fl-tu3"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="ivIcon" destination="3bQ-6D-lR8" id="cJg-eS-XId"/>
+                <outlet property="mainView" destination="Iq0-Sa-q5J" id="pNi-ac-CXR"/>
                 <outlet property="txtLbl" destination="Ks8-KW-Akm" id="uLT-nu-tD8"/>
             </connections>
-            <point key="canvasLocation" x="151.90839694656489" y="19.718309859154932"/>
+            <point key="canvasLocation" x="151.90839694656489" y="8.4507042253521139"/>
         </tableViewCell>
     </objects>
     <designables>
         <designable name="Ks8-KW-Akm">
-            <size key="intrinsicContentSize" width="195.66666666666666" height="28.333333333333332"/>
+            <size key="intrinsicContentSize" width="147.33333333333334" height="21.333333333333332"/>
         </designable>
     </designables>
     <resources>
+        <image name="chevron.right" catalog="system" width="97" height="128"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="123"/>
         <namedColor name="Text grey">
             <color red="0.20800000429153442" green="0.31000000238418579" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
